Css fixes for full viewport height/width and overflow hidden

--- a/src/Jukebox/Jukebox.css
+++ b/src/Jukebox/Jukebox.css
@@ -23,6 +23,10 @@
     filter: blur(20px);
 }
 
+html, body {
+    overflow: hidden;
+}
+
 body {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -35,7 +39,7 @@ body {
 h2 {
     font-family: LemonMilk;
     color: rgb(252,227,127);
-    font-size: 30px;
+    font-size: 5vw;
 }
 
 img {
